fixed popup menu positioning and z-index

--- a/site/src/styles/components/common/_ebinavbar.scss
+++ b/site/src/styles/components/common/_ebinavbar.scss
@@ -17,7 +17,8 @@
   display: flex;
   flex-direction: column;
   margin-left: -20px;
-  position: fixed;
+  position: absolute;
+  z-index: 10000;
 
   .nav-item {
     border: none !important;
